(fix) responsive issues on smaller resolutions.

--- a/src/documents/styles/sections/fundraiser.less
+++ b/src/documents/styles/sections/fundraiser.less
@@ -54,3 +54,15 @@
   margin: 10px;
   overflow: hidden;
 }
+
+@media screen and (max-width: 740px) {
+  .indiegogo-frame {
+    display: none;
+  }
+
+  .fundraiser-header {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
